# eot_tool

./: .gitignore  AGENTS.md  Cargo.toml  Makefile  README.md  package-lock.json  package.json  pnpm-lock.yaml  turbo.json
apps/benchmark-web/: index.html  package.json  tsconfig.json  vite.config.ts
apps/benchmark-web/src/: App.tsx  index.css  main.tsx
apps/benchmark-web/src/components/benchmark/: BenchmarkPage.tsx
apps/benchmark-web/src/components/runtime/: RuntimePanel.tsx  useFonttoolRuntime.ts
apps/benchmark-web/src/lib/benchmark/: scenarios.ts
crates/fonttool-bytes/: Cargo.toml
crates/fonttool-bytes/src/: lib.rs
crates/fonttool-cff/: Cargo.toml  build.rs
crates/fonttool-cff/native/: byte_io.h  cff_types.h  file_io.c  file_io.h  sfnt_font.c  sfnt_reader.c  sfnt_reader.h  sfnt_writer.c  sfnt_writer.h
crates/fonttool-cff/native/src/: byte_io.c  byte_io.h  cff_types.h  cu2qu.cc  cu2qu.h  file_io.h  glyf_codec.c  glyf_codec.h  native_bridge.cc  native_bridge.h  otf_convert.cc  otf_convert.h  parallel_runtime.cc  parallel_runtime.h  sfnt_font.h  sfnt_reader.h  sfnt_writer.h  tt_rebuilder.cc  tt_rebuilder.h
crates/fonttool-cff/src/: convert.rs  inspect.rs  instance.rs  lib.rs  office_static.rs  source.rs  subset.rs  variation.rs
crates/fonttool-cff/tests/: convert.rs  instance.rs  office_static.rs  otf_support.rs  source.rs
crates/fonttool-cli/: Cargo.toml
crates/fonttool-cli/src/: embedded_output.rs  main.rs
crates/fonttool-cli/tests/: cli_contract.rs  workspace_cli_smoke.rs
crates/fonttool-eot/: Cargo.toml
crates/fonttool-eot/src/: lib.rs
crates/fonttool-eot/tests/: eot_header.rs
crates/fonttool-glyf/: Cargo.toml
crates/fonttool-glyf/src/: decode.rs  encode.rs  lib.rs
crates/fonttool-harfbuzz/: Cargo.toml
crates/fonttool-harfbuzz/src/: lib.rs
crates/fonttool-mtx/: Cargo.toml
crates/fonttool-mtx/src/: cvt.rs  hdmx.rs  lib.rs  lz.rs
crates/fonttool-mtx/tests/: codecs.rs  lz_decode.rs  mtx_container.rs
crates/fonttool-runtime/: Cargo.toml
crates/fonttool-runtime/src/: lib.rs  otf.rs
crates/fonttool-sfnt/: Cargo.toml
crates/fonttool-sfnt/src/: lib.rs
crates/fonttool-sfnt/tests/: sfnt_parse.rs  sfnt_serialize.rs
crates/fonttool-subset/: Cargo.toml
crates/fonttool-subset/src/: lib.rs
crates/fonttool-wasm/: Cargo.toml
crates/fonttool-wasm/src/: lib.rs
docs/: office-static-cff-tech-notes.md
docs/superpowers/plans/: 2026-04-15-fonttool-src-retirement-phase0-1-implementation.md
docs/superpowers/specs/: 2026-04-13-fonttool-multithread-runtime-design.md  2026-04-14-fonttool-rust-rewrite-design.md  2026-04-14-otf-cff-eot-fidelity-design.md  2026-04-15-fonttool-src-retirement-design.md  2026-04-15-fonttool-support-matrix.md  2026-04-17-mtx-java-parity-block1-design.md  2026-04-18-cff-cff2-office-support-design.md
fuzz/: Cargo.toml
fuzz/fuzz_targets/: cff.rs  eot_header.rs  mtx_container.rs  sfnt_directory.rs
legacy/: README.md
src/: cff_reader.cc  cff_reader.h  cff_variation.cc  cff_variation.h  cvt_codec.c  cvt_codec.h  eot_header.c  eot_header.h  glyf_codec.h  hdmx_codec.c  hdmx_codec.h  lzcomp.c  lzcomp.h  main.c  mtx_container.c  mtx_container.h  mtx_decode.c  mtx_decode.h  mtx_encode.c  mtx_encode.h  otf_convert.cc  parallel_runtime.cc  parallel_runtime.h  sfnt_font.c  sfnt_font.h  sfnt_reader.c  sfnt_subset.c  sfnt_subset.h  sfnt_writer.c  status.h  subset_args.c  subset_args.h  subset_backend_harfbuzz.cc  subset_backend_harfbuzz.h  table_policy.c  table_policy.h  wasm_api.cc  wasm_api.h
testdata/: README-cff-fixtures.md  otto-cff2-variable.fntdata
tests/: compare_fonts.py  rust-test-inventory.md  test_cff_reader.cc  test_cff_variation.cc  test_cli.c  test_coretext_acceptance.c  test_cu2qu.cc  test_cvt_codec.c  test_decode_pipeline.c  test_encode_pipeline.c  test_eot_header.c  test_fonttools_parity.py  test_glyf_codec.c  test_hdmx_codec.c  test_lzcomp.c  test_main.c  test_mtx_container.c  test_otf_convert.cc  test_otf_parity.cc  test_parallel_runtime.cc  test_sfnt_subset.c  test_sfnt_writer.c  test_subset_args.c  test_table_policy.c  test_ttf_rebuilder.cc  test_ttf_rebuilder_header.c  test_wasm_api.cc  verify_font.py  verify_wasm_artifacts.sh
tests/macos-swift/: Package.swift
tests/macos-swift/Sources/FonttoolCoreTextProbe/: main.swift
tests/rust_integration/: crash_resistance.rs  decode.rs  encode.rs  otf_convert.rs  runtime_wasm.rs  subset.rs  support.rs  validation.rs  woff.rs
tools/: bench_case7_hash_chain.py  check_pptx_case7_parity.py  coretext_font_probe.swift
(+3 files in other folders)
