[package]
name = "fonttool-cli"
edition.workspace = true
license.workspace = true
publish = false
version.workspace = true

[dependencies]
fonttool-cff = { path = "../fonttool-cff" }
fonttool-eot = { path = "../fonttool-eot" }
fonttool-glyf = { path = "../fonttool-glyf" }
fonttool-harfbuzz = { path = "../fonttool-harfbuzz" }
fonttool-mtx = { path = "../fonttool-mtx" }
fonttool-sfnt = { path = "../fonttool-sfnt" }
fonttool-subset = { path = "../fonttool-subset" }

[dev-dependencies]
fonttool-sfnt = { path = "../fonttool-sfnt" }

[[bin]]
name = "fonttool"
path = "src/main.rs"

[[test]]
name = "decode"
path = "../../tests/rust_integration/decode.rs"

[[test]]
name = "encode"
path = "../../tests/rust_integration/encode.rs"

[[test]]
name = "subset"
path = "../../tests/rust_integration/subset.rs"

[[test]]
name = "otf_convert"
path = "../../tests/rust_integration/otf_convert.rs"
